Raise an Alert when we're offered not enough
As a hack, see why 1 small-bulb won't deliver in the simplest of cases.

Maybe it'd be nice to have a signal that specifies that you're willing
to pay the premium but want to set a custom limit for a small delivery.
nuclear-fuel-cell = -1 or something?

--- a/locale/en/transport_drones.cfg
+++ b/locale/en/transport_drones.cfg
@@ -10,3 +10,4 @@ transport-drone-capacity=Transport drone stack capacity
 transport-drone-speed=Transport drone speed
 transport-system=Transport system
 request-item=Request __1__
+low-supply=Insufficient items available to collect (__1__ < __2__)
