Add a list box with some things in it
Next; add all the things to it that make sense

First; dinner must grow

--- a/locale/en/transport_drones.cfg
+++ b/locale/en/transport_drones.cfg
@@ -10,3 +10,6 @@ transport-drone-capacity=Transport drone stack capacity
 transport-drone-speed=Transport drone speed
 transport-system=Transport system
 request-item=Request __1__
+
+road-network-id=Road network __1__
+drone-status=Drones __1__/__2__
