--- a/locale/en/transport_drones.cfg
+++ b/locale/en/transport_drones.cfg
@@ -13,3 +13,7 @@ request-item=Request __1__
 
 road-network-id=Road network __1__
 drone-status=Drones __1__/__2__
+stack-size=Stack size __1__
+minimum-stack-size=Min stack size __1__
+fuel-level=Fuel __1__
+supplying=Have __1__
