Move get_status_lines() out to depots
This lets the dashboard not care too much about the inner life of the
depots.

--- a/locale/en/transport_drones.cfg
+++ b/locale/en/transport_drones.cfg
@@ -16,4 +16,5 @@ drone-status=Drones __1__/__2__
 stack-size=Stack size __1__
 minimum-stack-size=Min stack size __1__
 fuel-level=Fuel __1__
-supplying=Have __1__
+supplying=Supply __1__
+requester-unconfigured=No request specified
