Make supply tidy

--- a/locale/en/transport_drones.cfg
+++ b/locale/en/transport_drones.cfg
@@ -12,9 +12,12 @@ transport-system=Transport system
 request-item=Request __1__
 
 road-network-id=Road network __1__
+request-item-status=Requesting [item=__1__]
+request-fluid-status=Requesting [fluid=__1__]
 drone-status=Drones __1__/__2__
 stack-size=Stack size __1__
 minimum-stack-size=Min stack size __1__
 fuel-level=Fuel __1__
-supplying=Supply __1__
+supply-item=Supply [item=__1__] __2__
+supply-fluid=Supply [fluid=__1__] __2__
 requester-unconfigured=No request specified
